# ObsidianPipe

./: .gitignore  README.md  cpp_linker.cp311-win_amd64.pyd  main.py  obdocx.py  patch_cache_position.py  pdfs.py  pyproject.toml  requierments.txt  requirements.txt  setup.py
.obsidian/: workspace.json
cpp_engine/: CMakeLists.txt  bindings.cpp  smart_linker.cpp
cpp_linker.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/: __init__.py  cpp_linker.cp312-win_amd64.pyd  cpp_linker.cp313-win_amd64.pyd  main.py  orchestrator.py
src/generators/: md_builder.py
src/parsers/: __init__.py  document_reader.py  docx_parser.py  tempCodeRunnerFile.py
